@@ -45,6 +45,11 @@
     top: 2em;
     z-index: 0;
   }
+  /* this seems to be a bug in the xsl style sheets when generating indexes */
+  div.index div.index
+  {
+    top: 0em;
+  }
   div.refnamediv
   {
     margin-top: 2em;
