@@ -1,5 +1,12 @@
 2009-01-20  Stefan Kost  <ensonic@users.sf.net>
 
+	* style-classic.css:
+	* style.css:
+	  Fix gap, caused by double index divs produces by index generated with
+	  the docbook stylesheets.
+
+2009-01-20  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  More ideas.
 
